#:schema https://json.schemastore.org/pyproject.json
[project]
description = "Python bindings for the Pact FFI library"
name        = "pact-python-ffi"

license = "MIT"
version = "0.0.0"

authors     = [{ name = "Joshua Ellis", email = "josh@jpellis.me" }]
maintainers = [{ name = "Joshua Ellis", email = "josh@jpellis.me" }]
