[package]
name = "pact_python_v3"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
pact_mock_server = { version = "0.7.5", path = "../../pact-reference/rust/pact_mock_server" }
pact_mock_server_ffi = { version = "0.0.7", path = "../../pact-reference/rust/pact_mock_server_ffi" }
pact_matching = { version = "0.6.2", path = "../../pact-reference/rust/pact_matching" }
pact_verifier = "0.8.1"
env_logger = "0.7"
log = "0.4.6"
maplit = "0.1.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
