[package]
name = "pact_python_v3"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
pact_mock_server = "0.7.15"
pact_mock_server_ffi = "0.0.15"
pact_matching = "0.8.11"
pact_verifier = "0.10.4"
env_logger = "0.7"
log = "0.4.6"
maplit = "0.1.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
bytes = { version = "1", features = ["serde"] }
url = "2.2.0"
ansi_term = "0.12.1"
async-trait = "0.1.24"
regex = "1"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

[dependencies.reqwest]
version = "0.11.0"
default-features = false
features = ["rustls-tls"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
