#:schema https://www.schemastore.org/pyproject.json
[project]
name = "example-aiohttp-and-flask"

description = "Example of using an aiohttp client and Flask server with Pact Python"

dependencies    = ["aiohttp~=3.0", "flask~=3.0", "typing-extensions~=4.0"]
requires-python = ">=3.10"
version         = "1.0.0"

[dependency-groups]
test = ["pact-python", "pytest-asyncio~=1.0", "pytest~=9.0"]

[tool.uv.sources]
pact-python = { path = "../../../" }

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.pytest]
addopts                            = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "session"

log_date_format = "%H:%M:%S"
log_format      = "%(asctime)s.%(msecs)03d [%(levelname)-8s] %(name)s: %(message)s"
log_level       = "NOTSET"
