#:schema https://www.schemastore.org/pyproject.json
[project]
name = "example-service-consumer-provider"

description = "Example of a service acting as both a Pact consumer and provider"

dependencies    = ["fastapi~=0.0", "requests~=2.0", "typing-extensions~=4.0"]
requires-python = ">=3.10"
version         = "1.0.0"

[dependency-groups]

test = ["pact-python", "pytest~=9.0", "uvicorn~=0.29"]

[tool.uv.sources]
pact-python = { path = "../../../" }

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.pytest]
addopts = ["--import-mode=importlib"]

log_date_format = "%H:%M:%S"
log_format      = "%(asctime)s.%(msecs)03d [%(levelname)-8s] %(name)s: %(message)s"
log_level       = "NOTSET"
