#:schema https://www.schemastore.org/pyproject.json

[project]
name = "example-plugins-grpc"

description = "Example of gRPC contract testing with the Pact protobuf plugin"

version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["grpcio~=1.0", "protobuf~=7.34"]

[dependency-groups]
test = ["pact-python", "pytest~=9.0"]

[tool]
  [tool.pytest.ini_options]
  addopts = ["--import-mode=importlib"]

  # The plugin examples import shared code via the `examples.plugins.*` package
  # path (e.g. the generated protobuf stubs in `examples.plugins.proto`), so the
  # repository root must be importable.
  pythonpath = ["../../.."]

  log_date_format = "%H:%M:%S"
  log_format = "%(asctime)s.%(msecs)03d [%(levelname)-8s] %(name)s: %(message)s"
  log_level = "NOTSET"

  [tool.ruff]
  extend = "../../../pyproject.toml"

  [tool.uv.sources]
  pact-python = { path = "../../../" }
